
Table "torneo" {
  "id" bigint [pk, not null, increment]
  "nombre" varchar(100) [not null]
  "descripcion" varchar(1000)
  "participantes_max" int [not null]
  "disciplina_id" bigint [not null]
  "tipo_torneo_id" bigint [not null]
  "clase_id" bigint [not null]
  "fecha_inicio" timestamp [not null]
  "fecha_limite" timestamp [not null, default: `CURRENT_TIMESTAMP`]
  "fecha_fin" timestamp
}

Table "torneo_imagen" {
  "torneo_id" bigint [not null]
  "imagen_id" bigint

Indexes {
  (torneo_id, imagen_id) [pk]
}
}

Table "disciplina" {
  "id" bigint [pk, not null, increment]
  "nombre" varchar(100) [unique, not null]
  "descripcion" varchar(1000)
}

Table "tipo_torneo" {
  "id" bigint [pk, not null, increment]
  "nombre" varchar(100) [unique, not null]
}

Table "clase" {
  "id" bigint [pk, not null, increment]
  "titulo" varchar(100) [not null]
  "descripcion" varchar(1000)
  "imagen_id" bigint
}

Table "normativa" {
  "id" bigint [pk, not null, increment]
  "nombre" varchar(250) [unique, not null]
  "descripcion" varchar(1000)
  "documento_id" bigint [not null]
}

Table "torneo_normativa" {
  "torneo_id" bigint [not null]
  "normativa_id" bigint [not null]

Indexes {
  (torneo_id, normativa_id) [pk]
}
}

Table "categoria" {
  "id" bigint [pk, not null, increment]
  "nombre" varchar(100) [unique, not null]
  "edad_min" int [not null]
  "edad_max" int [not null]
}

Table "premio" {
  "id" bigint [pk, not null, increment]
  "nombre" varchar(100) [unique, not null, note: 'trofeo']
  "descripcion" varchar(500)
  "categoria_id" bigint [not null]
  "torneo_id" bigint [not null]
  "equipo_id" bigint
}

Table "torneo_categoria" {
  "torneo_id" bigint [not null]
  "categoria_id" bigint [not null]

Indexes {
  (torneo_id, categoria_id) [pk]
}
}

Table "partido" {
  "id" bigint [pk, not null, increment]
  "jornada" int [not null]
  "fecha" timestamp [not null]
  "torneo_id" bigint [not null]
  "reserva_id" bigint
}

Table "partido_equipo" {
  "partido_id" bigint [not null]
  "equipo_id" bigint [not null]
  "puntos" int [note: 'Puntos de ese equipo en ese partido']

Indexes {
  (partido_id, equipo_id) [pk]
}
}

Table "torneo_equipo" {
  "torneo_id" bigint [not null]
  "equipo_id" bigint [not null]

Indexes {
  (torneo_id, equipo_id) [pk]
}
}

Table "equipo" {
  "id" bigint [pk, not null, increment]
  "nombre" varchar(100) [not null]
  "descripcion" varchar(10000)
  "licencia" varchar(250) [not null, note: 'Numero de licencia']
  "categoria_id" bigint [not null]
  "creador_id" bigint
}

Table "equipo_participante" {
  "equipo_id" bigint [not null]
  "participante_id" bigint [not null]

Indexes {
  (participante_id, equipo_id) [pk]
}
}

Table "usuario" {
  "id" bigint [pk, not null, increment]
  "nombre" varchar(100) [not null]
  "apellido1" varchar(100) [not null]
  "apellido2" varchar(100) [not null]
  "email" varchar(100) [unique, not null]
  "password" varchar(100)
}

Table "participante" {
  "id" bigint [pk, not null, increment]
  "fecha_nacimiento" date [not null]
  "licencia" varchar(250) [unique, not null]
  "tipo_participante_id" bigint [not null]
  "imagen_id" bigint
  "usuario_id" bigint [not null]
}

Table "participante_documento" {
  "participante_id" bigint [not null]
  "documento_id" bigint [not null]

Indexes {
  (participante_id, documento_id) [pk]
}
}

Table "tipo_participante" {
  "id" bigint [pk, not null, increment]
  "nombre" varchar(100) [unique, not null]
  "descripcion" varchar(500)
}

Table "reserva" {
  "id" bigint [pk, not null, increment]
  "fecha" date [not null]
  "usuario_id" bigint [not null]
}

Table "material" {
  "id" bigint [pk, not null, increment]
  "nombre" varchar(100) [unique, not null]
  "color" varchar(20) [not null]
  "descripcion" varchar(500)
}

Table "pista" {
  "id" bigint [pk, not null, increment]
  "nombre" varchar(100) [unique, not null]
  "descripcion" varchar(100)
  "disciplina_id" bigint [not null]
  "direccion_id" bigint [not null]
}

Table "reserva_material" {
  "reserva_id" bigint [not null]
  "material_id" bigint [not null]

Indexes {
  (reserva_id, material_id) [pk]
}
}

Table "reserva_pista" {
  "reserva_id" bigint [not null]
  "pista_id" bigint [not null]

Indexes {
  (reserva_id, pista_id) [pk]
}
}

Table "direccion" {
  "id" bigint [pk, not null, increment]
  "calle" varchar(100) [not null]
  "numero" int
  "cod_postal" int [not null]
  "ciudad" varchar(100) [not null]
  "provincia" varchar(100) [not null]
  "pais" varchar(100) [not null]
}

Table "documento" {
  "id" bigint [pk, not null, increment]
  "ruta" varchar(250) [unique, not null]
}

Table "imagen" {
  "id" bigint [pk, not null, increment]
  "ruta" varchar(250) [unique, not null]
}

Table "log" {
  "id" int(11) [pk, not null]
  "level" varchar(10) [default: NULL]
  "category" varchar(255) [default: NULL]
  "log_time" timestamp [not null, default: `current_timestamp()`]
  "prefix" text [default: NULL]
  "message" text [default: NULL]
}

Ref:"disciplina"."id" < "torneo"."disciplina_id"

Ref:"tipo_torneo"."id" < "torneo"."tipo_torneo_id"

Ref:"clase"."id" < "torneo"."clase_id"

Ref:"torneo"."id" < "torneo_imagen"."torneo_id"

Ref:"imagen"."id" < "torneo_imagen"."imagen_id"

Ref:"imagen"."id" < "clase"."imagen_id"

Ref:"documento"."id" < "normativa"."documento_id"

Ref:"torneo"."id" < "torneo_normativa"."torneo_id"

Ref:"normativa"."id" < "torneo_normativa"."normativa_id"

Ref:"categoria"."id" < "premio"."categoria_id"

Ref:"torneo"."id" < "premio"."torneo_id"

Ref:"equipo"."id" < "premio"."equipo_id"

Ref:"torneo"."id" < "torneo_categoria"."torneo_id"

Ref:"categoria"."id" < "torneo_categoria"."categoria_id"

Ref:"torneo"."id" < "partido"."torneo_id"

Ref:"reserva"."id" < "partido"."reserva_id"

Ref:"partido"."id" < "partido_equipo"."partido_id"

Ref:"equipo"."id" < "partido_equipo"."equipo_id"

Ref:"torneo"."id" < "torneo_equipo"."torneo_id"

Ref:"equipo"."id" < "torneo_equipo"."equipo_id"

Ref:"categoria"."id" < "equipo"."categoria_id"

Ref:"equipo"."id" < "equipo_participante"."equipo_id"

Ref:"participante"."id" < "equipo_participante"."participante_id"

Ref:"tipo_participante"."id" < "participante"."tipo_participante_id"

Ref:"imagen"."id" < "participante"."imagen_id"

Ref:"usuario"."id" < "participante"."usuario_id"

Ref:"participante"."id" < "participante_documento"."participante_id"

Ref:"documento"."id" < "participante_documento"."documento_id"

Ref:"usuario"."id" < "reserva"."usuario_id"

Ref:"direccion"."id" < "pista"."direccion_id"

Ref:"disciplina"."id" < "pista"."disciplina_id"

Ref:"reserva"."id" < "reserva_material"."reserva_id"

Ref:"material"."id" < "reserva_material"."material_id"

Ref:"reserva"."id" < "reserva_pista"."reserva_id"

Ref:"pista"."id" < "reserva_pista"."pista_id"

Ref:"participante"."id" < "equipo"."creador_id"
